<resources>
    <string name="app_name">Random Civ6 Generator</string>
    <string name="leader_activity_name">Choose Leader</string>
    <string name="leaders">Leaders</string>
    <string name="dlc_s">DLC\'s</string>
    <string name="pick_random">Pick Random</string>
    <string name="set_all">Set All</string>
    <string name="confirm">Confirm</string>
    <string name="ok">ok</string>
    <string name="english" translatable="false">ENGLISH</string>
    <string name="language">Language</string>
    <string name="no_leader_in_pool">No Leader in pool, choose at least one DLC</string>
    <string name="vanilla">Vanilla</string>
    <string name="persia_and_macedon">Persia And Macedon</string>
    <string name="nubia">Nubia</string>
    <string name="byzantium_and_gaul">Byzantium And Gaul</string>
    <string name="vietnam_and_kublai">Vietnam And Kublai Khan</string>
    <string name="khmer_and_indonesia">Khmer And Indonesia</string>
    <string name="babylon">Babylon</string>
    <string name="rise_and_fall">Rise And Fall</string>
    <string name="poland">Poland</string>
    <string name="portugal">Portugal</string>
    <string name="gather_and_storm">Gather And Storm</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="new_frontier_pass">New Frontier Pass</string>
    <string name="maya_and_columbia">Maya And Gran Colombia</string>
    <string name="australia">Australia</string>
    <string name="cath_de_med_bq">Catherine De Medici (Black Queen)</string>
    <string name="cath_de_med_mag">Catherine De Medici (Magnificence)</string>
    <string name="cleopatra">Cleopatra</string>
    <string name="fred_barbar">Frederick Barbarossa</string>
    <string name="gandhi">Gandhi</string>
    <string name="gilgamesh">Gilgamesh</string>
    <string name="gorgo">Gorgo</string>
    <string name="harald">Harald Hardrada</string>
    <string name="hojo_toki">Hojo Tokimune</string>
    <string name="montezuma">Montezuma</string>
    <string name="mvemba">Mvemba A Nzinga</string>
    <string name="pedro">Pedro II.</string>
    <string name="pericles">Pericles</string>
    <string name="peter">Peter</string>
    <string name="philipp_ii">Philipp II.</string>
    <string name="qinshi">QinShi Huang</string>
    <string name="saladin">Saladin</string>
    <string name="teddy_roose_bm">Teddy Roosevelt (Bull Moose)</string>
    <string name="teddy_roose_rr">Teddy Roosevelt (Rough Rider)</string>
    <string name="tomyris">Tomyris</string>
    <string name="trajan">Trajan</string>
    <string name="victoria">Victoria</string>
    <string name="alexander">Alexander</string>
    <string name="cyrus">Cyrus</string>
    <string name="amanitore">Amanitore</string>
    <string name="basil_ii">Basil II.</string>
    <string name="ambiorix">Ambiorix</string>
    <string name="batrieu">Ba Trieu</string>
    <string name="kublai_mong">Kublai Khan (Mongolian)</string>
    <string name="kublai_chin">Kublai Khan (Chinese)</string>
    <string name="jayavarman">Jayavarman VII.</string>
    <string name="gitarja">Gitarja</string>
    <string name="hammurabi">Hammurabi</string>
    <string name="jadigwa">Jadigwa</string>
    <string name="joao_iii">Joao III.</string>
    <string name="john_curtin">John Curtin</string>
    <string name="simon_bolivar">Simon Bolivar</string>
    <string name="ladysixsky">Lady Six Sky</string>
    <string name="menelik">Menelik II.</string>
    <string name="chandragupta">Chandragupta</string>
    <string name="genghis_khan">Genghis Khan</string>
    <string name="lautaro">Lautaro</string>
    <string name="poundmaker">Poundmaker</string>
    <string name="robert_the_bruce">Robert The Bruce</string>
    <string name="seondeok">Seondeok</string>
    <string name="shaka">Shaka</string>
    <string name="tamar">Tamar</string>
    <string name="wilhemina">Wilhemina</string>
    <string name="dido">Dido</string>
    <string name="eleanor_french">Eleanor of Aquitaine (French)</string>
    <string name="eleanor_english">Eleanor of Aquitaine (English)</string>
    <string name="kristina">Kristina</string>
    <string name="kupe">Kupe</string>
    <string name="mansa_musa">Mansa Musa</string>
    <string name="matthias_corvinus">Matthias Corvinus</string>
    <string name="pachacuti">Pachacuti</string>
    <string name="suleiman">Suleiman</string>
    <string name="wilfrid_laurier">Wilfrid Laurier</string>
    <string name="leader_bonus">Leader Bonus</string>
    <string name="leader_abilities">Leader Abilities</string>
    <string name="unique_unit">Unique Unit</string>
    <string name="unique_building">Unique Building</string>
    <string name="no_second_build_unit">Leader has no second unique unit or unique building</string>
    <string name="alexander_bonus">Cities do not incur war weariness. 
        All military units heal completely when this player captures
        a city with a world wonder.</string>
    <string name="alexander_abilities">When conquering a city that is not a Free city receive a
        Eureka for each Encampment or Campus in the conquered city and an Inspiration for each
        Holy Site or Theatre Square.</string>
    <string name="alexander_unit_1">Hypaspist - Macedonian unique melee unit that replaces
        the Swordsman. +5 Combat Strength when besieging districts.
        50% Additional Support Bonus.</string>
    <string name="alexander_unit_2">Hetairoi - Macedonian unique heavy cavalry unit that
        replaces the Horseman. Additional +5 Combat Strength when adjacent to a Great General.
        +5 Great General points when killing an enemy unit. Starts with 1 free Promotion.</string>
    <string name="alexander_building">Basilikoi Paides - A building unique to Macedon.
        +25% combat experience for all melee, ranged land units, and Hetairoi trained in this city.
        Gain Science equal to 25% of the unit\'s cost when a non civilian unit is
        created in this city. Strategic Resource Stockpiles increased +10 (on Standard Speed).
        May not be built in an Encampement district that already has a Stable.</string>
    <string name="amanitore_bonus">+20% Production towards all districts rising to +40% if there
        is a Nubian Pyramid adjacent to the City Center.</string>
    <string name="amanitore_abilities">+30% Production toward Ranged units. All Ranged units gain
        +50% combat experience. Mines over strategic resources provide +1 Production. Mines over
        bonus and luxury resources provide +2 Gold.</string>
    <string name="amanitore_unit_1">Pitati Archer - Nubian unique Ancient era unit that
        replaces the Archer. Stronger than the Archer with extra Movement.
        Upgrades to Crossbowman.</string>
    <string name="amanitore_building">Nubian Pyramid - Improvement that unlocks with Masonry
        and must be build on Desert, Desert Hills or Floodplains. +2 Faith and +2 Food. Receives
        additional yields from adjacent districts. +1 Food if adjacent to a city center. For all
        other districts that award adjacency bonuses: +1 of the appropriate yield if that district
        is adjacent.</string>
    <string name="ambiorix_bonus">Your civilization gains Culture equal to 20% of the unit\'s cost
        when a non-civilian is trained. Melee, Anti-Cavalry, and Ranged Units receive +2 Combat
        Strength for every adjacent unit.</string>
    <string name="ambiorix_abilities">Mines provide a minor adjacency bonus for all districts, a
        Culture Bomb of unowned territory, and receive +1 Culture. Speciality districts do not
        receive a minor adjacency for being adjacent to another district and these districts
        cannot be build adjacent to the City Center.</string>
    <string name="ambiorix_unit_1">Gaesatae - Gallic unique Ancient era unit that replaces
        the Warrior. This unit has increased cost and receives +10 Combat Strength when fighting
        units with a higher base Combat Strength. +5 Combat Strength vs. district defenses.</string>
    <string name="ambiorix_building">Oppidum - A district unique to Gaul that is cheaper and
        available earlier than the district it replaces, the Industrial Zone. The Oppidum district
        is defensible with ranged attack. When the first Oppidum is constructed the Apprenticeship
        technology is unlocked. +2 Production adjacency bonus from Quarries and strategic
        resources.</string>
    <string name="batrieu_bonus">+5 Combat Strength for units fighting in Rainforest, Marsh, or
        Woods tiles. +1 Movement if they begin their turn there. Both these bonuses are doubled
        if the tile is your territory.</string>
    <string name="batrieu_abilities">All land specialty districts can only be build on Rainforest,
        Marsh, or Woods. Receive the following yields for every building on these features: +1
        Culture in Woods, +1 Science in Rainforest and +1 Production in Marsh. Woods can be planted
        with the Medieval Faires civic.</string>
    <string name="batrieu_unit_1">Voi Chien - Vietnamese unique Medieval era ranged unit
        that replaces the Crossbowman. These units have additional movement and can move after
        attacking. They are also stronger when defending, more expensive, and have greater
        sight.</string>
    <string name="batrieu_building">Thanh - A district unique to Vietnam which replaces the
        Encampment. +2 Culture for each adjacent district. After Flight is researched receive
        Tourism equal to the Culture output. This district does not require population, is cheaper
        to build, cannot be build adjacent to the city center, does not provide Great People
        points, and is not a specialty district.</string>
    <string name="basil_bonus">Heavy and Light Cavalry units do full damage against cities
        following the same religion as Byzantium. Gain the Tagma unique unit when the Divine
        Right civic is discovered.</string>
    <string name="basil_abilities">Units receive +3 Combat Strength or Religious Strength for each
        Holy City converted to Byzantium\'s Religion (including Byzantium\'s Holy City).
        Byzantium\'s Religion is spread to nearby cities when defeating a unit belonging to an
        enemy civilization or city-state. +1 Great Prophet point from cities with a Holy Site
        district.</string>
    <string name="basil_unit_1">Dromon - Byzantine unique Classical era unit that replaces
        the Quadrireme that has additional range and receives +10 Combat Strength against
        units.</string>
    <string name="basil_unit_2">Tagma - Basil II\'s unique Medieval era unit that replaces
        the Knight. Land units within 1 tile of the Tagma receive +4 Combat Strength or
        Religious Strength.</string>
    <string name="basil_building">Hippodrome - A district unique to Byzantium. Replaces the
        Entertainment Complex district, provides +3 Amenities, and is cheaper to build. When the
        Hippodrome and buildings in this district are constructed, receive a Heavy Cavalry unit.
        Units granted from this district do not have a resource maintenance cost. Cannot be build
        in a city with a Water Park.</string>
    <string name="cath_bq_bonus">Has 1 level of Diplomatic Visibility greater than normal with
        every civilization that she\'s met. Receives a free Spy (and extra spy  capacity) with the
        Castles technology. All spies start as Agents with a free promotion.</string>
    <string name="cath_bq_abilities">+20% Production toward Medieval, Renaissance, and Industrial
        era wonders. Tourism from wonders of any era is +100%</string>
    <string name="cath_bq_unit_1">Garde Imperiale - French unique Industrial era melee unit that
        replaces the Line Infantry. +10 Combat Strength when fighting on your capital\'s
        continent. Great General points for killing units.</string>
</resources>